--- a/rufangrongke/rufangrongke/Classes/loupan/WXZLouPanYongJinCell_1.xib
+++ b/rufangrongke/rufangrongke/Classes/loupan/WXZLouPanYongJinCell_1.xib
@@ -47,8 +47,8 @@
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fcd-Ae-1Ti">
-                        <rect key="frame" x="108" y="0.0" width="75" height="28.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="待定" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fcd-Ae-1Ti">
+                        <rect key="frame" x="98" y="0.0" width="28" height="28.5"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="75" id="z7o-Ny-HYQ"/>
                         </constraints>
@@ -60,8 +60,8 @@
                             </mask>
                         </variation>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XI7-6H-xv0">
-                        <rect key="frame" x="108" y="28.5" width="75" height="29"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="待定" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XI7-6H-xv0">
+                        <rect key="frame" x="98" y="28" width="28" height="29"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="75" id="1FD-gm-Z02"/>
                         </constraints>
@@ -73,8 +73,8 @@
                             </mask>
                         </variation>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e6M-4f-tyZ">
-                        <rect key="frame" x="108" y="57.5" width="75" height="28.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="待定" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e6M-4f-tyZ">
+                        <rect key="frame" x="98" y="57" width="28" height="28.5"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="75" id="Eco-AH-OWs"/>
                         </constraints>
@@ -86,8 +86,8 @@
                             </mask>
                         </variation>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="80c-HG-rPe">
-                        <rect key="frame" x="108" y="86" width="75" height="29"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="待定" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="80c-HG-rPe">
+                        <rect key="frame" x="98" y="86" width="28" height="29"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="75" id="01d-zB-JcS"/>
                         </constraints>
@@ -99,8 +99,8 @@
                             </mask>
                         </variation>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v0H-xy-n7j">
-                        <rect key="frame" x="108" y="115" width="75" height="28.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="待定" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v0H-xy-n7j">
+                        <rect key="frame" x="98" y="115" width="28" height="28.5"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="75" id="SIP-VX-otc"/>
                         </constraints>
@@ -118,7 +118,7 @@
                     <constraint firstItem="PuO-cY-gYf" firstAttribute="top" secondItem="arT-FR-7FN" secondAttribute="bottom" id="2HV-cT-bhD"/>
                     <constraint firstItem="v0H-xy-n7j" firstAttribute="height" secondItem="fcd-Ae-1Ti" secondAttribute="height" id="2tg-UX-Gsm"/>
                     <constraint firstItem="XI7-6H-xv0" firstAttribute="height" secondItem="fcd-Ae-1Ti" secondAttribute="height" id="3US-pr-4Fi"/>
-                    <constraint firstItem="v0H-xy-n7j" firstAttribute="leading" secondItem="Bc5-lt-DXh" secondAttribute="trailing" constant="20" id="3ZT-cV-Pc3"/>
+                    <constraint firstItem="v0H-xy-n7j" firstAttribute="leading" secondItem="Bc5-lt-DXh" secondAttribute="trailing" constant="10" id="3ZT-cV-Pc3"/>
                     <constraint firstItem="h5Y-VM-cCX" firstAttribute="leading" secondItem="Io0-hc-Lwr" secondAttribute="leading" constant="13" id="3bU-ek-H6o"/>
                     <constraint firstItem="Bc5-lt-DXh" firstAttribute="top" secondItem="PuO-cY-gYf" secondAttribute="bottom" id="6HV-un-SL8"/>
                     <constraint firstItem="PuO-cY-gYf" firstAttribute="leading" secondItem="Io0-hc-Lwr" secondAttribute="leading" constant="13" id="7lp-kB-WpA"/>
@@ -126,7 +126,7 @@
                     <constraint firstItem="e6M-4f-tyZ" firstAttribute="width" secondItem="fcd-Ae-1Ti" secondAttribute="width" id="9BL-bR-jlp"/>
                     <constraint firstItem="arT-FR-7FN" firstAttribute="width" secondItem="h5Y-VM-cCX" secondAttribute="width" id="9dI-IL-tu9"/>
                     <constraint firstItem="Bc5-lt-DXh" firstAttribute="leading" secondItem="Io0-hc-Lwr" secondAttribute="leading" constant="13" id="BHJ-Dn-Ojs"/>
-                    <constraint firstItem="fcd-Ae-1Ti" firstAttribute="leading" secondItem="h5Y-VM-cCX" secondAttribute="trailing" constant="20" id="Cqc-WI-TDy"/>
+                    <constraint firstItem="fcd-Ae-1Ti" firstAttribute="leading" secondItem="h5Y-VM-cCX" secondAttribute="trailing" constant="10" id="Cqc-WI-TDy"/>
                     <constraint firstItem="Bc5-lt-DXh" firstAttribute="top" secondItem="PuO-cY-gYf" secondAttribute="bottom" id="EgB-I2-Pz5"/>
                     <constraint firstItem="Bc5-lt-DXh" firstAttribute="width" secondItem="h5Y-VM-cCX" secondAttribute="width" id="Fh1-JS-59m"/>
                     <constraint firstItem="80c-HG-rPe" firstAttribute="height" secondItem="fcd-Ae-1Ti" secondAttribute="height" id="IbM-1f-uKc"/>
@@ -135,7 +135,7 @@
                     <constraint firstItem="PuO-cY-gYf" firstAttribute="width" secondItem="h5Y-VM-cCX" secondAttribute="width" id="SY2-tE-xd7"/>
                     <constraint firstItem="80c-HG-rPe" firstAttribute="width" secondItem="fcd-Ae-1Ti" secondAttribute="width" id="UXZ-up-xi8"/>
                     <constraint firstItem="h5Y-VM-cCX" firstAttribute="top" secondItem="Io0-hc-Lwr" secondAttribute="top" id="V9G-00-0Ih"/>
-                    <constraint firstItem="e6M-4f-tyZ" firstAttribute="leading" secondItem="arT-FR-7FN" secondAttribute="trailing" constant="20" id="Vjo-AE-ojt"/>
+                    <constraint firstItem="e6M-4f-tyZ" firstAttribute="leading" secondItem="arT-FR-7FN" secondAttribute="trailing" constant="10" id="Vjo-AE-ojt"/>
                     <constraint firstItem="bvQ-x2-zEY" firstAttribute="leading" secondItem="Io0-hc-Lwr" secondAttribute="leading" constant="13" id="Wod-Jz-Zpf"/>
                     <constraint firstItem="XI7-6H-xv0" firstAttribute="width" secondItem="fcd-Ae-1Ti" secondAttribute="width" id="YnT-hi-1Uy"/>
                     <constraint firstItem="80c-HG-rPe" firstAttribute="top" secondItem="e6M-4f-tyZ" secondAttribute="bottom" id="ZXz-a1-1vP"/>
@@ -149,12 +149,12 @@
                     <constraint firstItem="bvQ-x2-zEY" firstAttribute="top" secondItem="h5Y-VM-cCX" secondAttribute="bottom" id="iIT-wy-eod"/>
                     <constraint firstItem="fcd-Ae-1Ti" firstAttribute="top" secondItem="Io0-hc-Lwr" secondAttribute="top" id="kt8-Lk-7nR"/>
                     <constraint firstItem="PuO-cY-gYf" firstAttribute="height" secondItem="h5Y-VM-cCX" secondAttribute="height" id="lse-ws-iJQ"/>
-                    <constraint firstItem="80c-HG-rPe" firstAttribute="leading" secondItem="PuO-cY-gYf" secondAttribute="trailing" constant="20" id="m3R-PL-id6"/>
+                    <constraint firstItem="80c-HG-rPe" firstAttribute="leading" secondItem="PuO-cY-gYf" secondAttribute="trailing" constant="10" id="m3R-PL-id6"/>
                     <constraint firstItem="arT-FR-7FN" firstAttribute="height" secondItem="h5Y-VM-cCX" secondAttribute="height" id="mRj-F5-bRb"/>
                     <constraint firstItem="e6M-4f-tyZ" firstAttribute="top" secondItem="XI7-6H-xv0" secondAttribute="bottom" id="nre-g7-TFo"/>
                     <constraint firstItem="bvQ-x2-zEY" firstAttribute="width" secondItem="h5Y-VM-cCX" secondAttribute="width" id="r3i-fH-TRA"/>
                     <constraint firstItem="bvQ-x2-zEY" firstAttribute="top" secondItem="h5Y-VM-cCX" secondAttribute="bottom" id="rdD-PK-rAg"/>
-                    <constraint firstItem="XI7-6H-xv0" firstAttribute="leading" secondItem="bvQ-x2-zEY" secondAttribute="trailing" constant="20" id="req-rt-Vt0"/>
+                    <constraint firstItem="XI7-6H-xv0" firstAttribute="leading" secondItem="bvQ-x2-zEY" secondAttribute="trailing" constant="10" id="req-rt-Vt0"/>
                     <constraint firstAttribute="bottom" secondItem="v0H-xy-n7j" secondAttribute="bottom" id="rri-05-tWs"/>
                     <constraint firstItem="XI7-6H-xv0" firstAttribute="top" secondItem="fcd-Ae-1Ti" secondAttribute="bottom" id="vtV-NX-fPM"/>
                     <constraint firstItem="arT-FR-7FN" firstAttribute="leading" secondItem="Io0-hc-Lwr" secondAttribute="leading" constant="13" id="y8z-GN-Raj"/>
