--- a/rufangrongke/rufangrongke/Classes/kehu/View/WXZBasicInfoCell.xib
+++ b/rufangrongke/rufangrongke/Classes/kehu/View/WXZBasicInfoCell.xib
@@ -47,7 +47,7 @@
                             <constraint firstAttribute="height" constant="30" id="XzX-ZZ-Upa"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <textInputTraits key="textInputTraits"/>
+                        <textInputTraits key="textInputTraits" returnKeyType="done"/>
                     </textField>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="手机号：" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7fr-dA-f8x">
                         <rect key="frame" x="11" y="50" width="60" height="18"/>
