--- a/rufangrongke/rufangrongke/Classes/kehu/View/WXZPriceCell.xib
+++ b/rufangrongke/rufangrongke/Classes/kehu/View/WXZPriceCell.xib
@@ -44,7 +44,7 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="至" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RTL-mq-bNN">
                         <rect key="frame" x="181" y="46" width="15" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <textField opaque="NO" clipsSubviews="YES" tag="100026" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder=" 万元" minimumFontSize="17" background="kh_quyuunselect" translatesAutoresizingMaskIntoConstraints="NO" id="eaS-YU-DOf">
