--- a/rufangrongke/rufangrongke/Classes/main/Controller/WXZFindPasswordController.xib
+++ b/rufangrongke/rufangrongke/Classes/main/Controller/WXZFindPasswordController.xib
@@ -44,7 +44,7 @@
                                 <constraint firstAttribute="height" constant="39" id="KdB-Nr-mFS"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                            <textInputTraits key="textInputTraits"/>
+                            <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                         </textField>
                     </subviews>
                     <constraints>
@@ -96,7 +96,7 @@
                                 <constraint firstAttribute="height" constant="39" id="aX6-Oj-mvP"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                            <textInputTraits key="textInputTraits"/>
+                            <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                         </textField>
                     </subviews>
                     <constraints>
